--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: example
-description: A simple command-line application.
+description: dart sealed example.
 version: 0.1.0
 publish_to: 'none'
 
