--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,5 +6,11 @@ publish_to: 'none'
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
+dependencies:
+  sealed_annotations:
+    path: ../sealed_annotations
+
 dev_dependencies:
   pedantic: ^1.9.0
+  sealed_generators:
+    path: ../sealed_generators
