--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     path: ../sealed_annotations
 
 dev_dependencies:
-  pedantic: ^1.9.0
   sealed_generators:
     path: ../sealed_generators
+  pedantic: ^1.9.0
+  build_runner: ^1.12.2
