--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -6,6 +6,15 @@ publish_to: 'none'
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
+dependencies:
+  sealed_annotations:
+    path: ../sealed_annotations
+  meta: ^1.3.0
+  build: ^2.0.0
+  source_gen: ^1.0.0
+
 dev_dependencies:
   pedantic: ^1.11.0
   test: ^1.16.8
+  build_test: ^2.0.0
+  build_runner: ^1.12.2
