--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -26,7 +26,7 @@ jobs:
         run: dart analyze
       - name: sealed_annotations test
         working-directory: ./sealed_annotations
-        run: dart test
+        run: dart test --coverage coverage/lcov.info
       - name: sealed_annotations run example
         working-directory: ./sealed_annotations
         run: dart run ./example/sealed_annotations_example.dart
@@ -41,7 +41,7 @@ jobs:
         run: dart analyze
       - name: sealed_generators test
         working-directory: ./sealed_generators
-        run: dart test
+        run: dart test --coverage coverage/lcov.info
       - name: sealed_generators run example
         working-directory: ./sealed_generators
         run: dart run ./example/sealed_generators_example.dart
@@ -50,7 +50,9 @@ jobs:
         run: dart pub get
       - name: example build
         working-directory: ./example
-        run: dart run build_runner build
+        run: |
+          dart run build_runner clean
+          dart run build_runner build
       - name: example run
         working-directory: ./example
         run: dart run
