--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -52,7 +52,7 @@ jobs:
         working-directory: ./example
         run: |
           dart run build_runner clean
-          dart run build_runner build
+          dart run build_runner build --delete-conflicting-outputs
       - name: example run
         working-directory: ./example
         run: dart run
