--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
+      - name: install lcov
+        run: sudo apt-get install lcov
       - name: sealed_annotations init
         working-directory: ./sealed_annotations
         run: dart pub get
@@ -26,7 +28,10 @@ jobs:
         run: dart analyze
       - name: sealed_annotations test
         working-directory: ./sealed_annotations
-        run: dart test --coverage coverage/lcov.info
+        run: dart test --coverage ./coverage/lcov.info
+      - name: sealed_annotations coverage html
+        working-directory: ./sealed_annotations
+        run: genhtml ./coverage/lcov.info -o ./coverage/html
       - name: sealed_annotations run example
         working-directory: ./sealed_annotations
         run: dart run ./example/sealed_annotations_example.dart
@@ -41,7 +46,10 @@ jobs:
         run: dart analyze
       - name: sealed_generators test
         working-directory: ./sealed_generators
-        run: dart test --coverage coverage/lcov.info
+        run: dart test --coverage ./coverage/lcov.info
+      - name: sealed_generators coverage html
+        working-directory: ./sealed_generators
+        run: genhtml ./coverage/lcov.info -o ./coverage/html
       - name: sealed_generators run example
         working-directory: ./sealed_generators
         run: dart run ./example/sealed_generators_example.dart
