--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -50,9 +50,16 @@ jobs:
         run: dart pub get
       - name: example build
         working-directory: ./example
-        run: |
-          dart run build_runner clean
-          dart run build_runner build --delete-conflicting-outputs
+        run: dart run build_runner build --delete-conflicting-outputs
+      - name: example format
+        working-directory: ./example
+        run: dart format --output=none --set-exit-if-changed ./bin/example.dart ./test
+      - name: example analyze
+        working-directory: ./example
+        run: dart analyze
+      - name: example test
+        working-directory: ./example
+        run: dart test --coverage ./coverage/lcov.info
       - name: example run
         working-directory: ./example
         run: dart run
