--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,4 +14,5 @@ dev_dependencies:
   sealed_generators:
     path: ../sealed_generators
   pedantic: ^1.9.0
+  test: ^1.16.8
   build_runner: ^1.12.2
