--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sealed_generators
-description: sealed generators.
+description: Dart and Flutter sealed class generator.
 version: 0.1.0
-publish_to: 'none'
+homepage: https://github.com/6thsolution/dart_sealed
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
