--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -3,6 +3,9 @@ description: Dart and Flutter sealed class generator.
 version: 0.1.0
 homepage: https://github.com/6thsolution/dart_sealed
 
+# todo remove this
+publish_to: 'none'
+
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
