--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -3,15 +3,11 @@ description: Dart and Flutter sealed class generator.
 version: 0.1.0
 homepage: https://github.com/6thsolution/dart_sealed
 
-# todo remove this
-publish_to: 'none'
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  sealed_annotations:
-    path: ../sealed_annotations
+  sealed_annotations: ^0.1.0
   meta: ^1.3.0
   build: ^2.0.0
   source_gen: ^1.0.0
