--- a/sealed_super_enum_mapper/pubspec.yaml
+++ b/sealed_super_enum_mapper/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  super_enum: ^0.5.0
   # todo change this
   sealed_annotations:
     path: ../sealed_annotations
@@ -19,6 +20,9 @@ dependencies:
   meta: ^1.3.0
   build: ^2.0.0
   source_gen: ^1.0.0
+
+dependency_overrides:
+  equatable: ^2.0.0
 
 dev_dependencies:
   pedantic: ^1.11.0
