--- a/sealed_super_enum_mapper_example/pubspec.yaml
+++ b/sealed_super_enum_mapper_example/pubspec.yaml
@@ -8,8 +8,12 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  super_enum: ^0.5.0
   sealed_annotations:
     path: ../sealed_annotations
+
+dependency_overrides:
+  equatable: ^2.0.0
 
 dev_dependencies:
   sealed_super_enum_mapper:
