--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -63,3 +63,36 @@ jobs:
       - name: example run
         working-directory: ./example
         run: dart run
+      - name: sealed_super_enum_mapper init
+        working-directory: ./sealed_super_enum_mapper
+        run: dart pub get
+      - name: sealed_super_enum_mapper format
+        working-directory: ./sealed_super_enum_mapper
+        run: dart format --output=none --set-exit-if-changed ./example ./lib ./test
+      - name: sealed_super_enum_mapper analyze
+        working-directory: ./sealed_super_enum_mapper
+        run: dart analyze
+      - name: sealed_super_enum_mapper test
+        working-directory: ./sealed_super_enum_mapper
+        run: dart test --coverage ./dart_coverage
+      - name: sealed_super_enum_mapper run example
+        working-directory: ./sealed_super_enum_mapper
+        run: dart run ./example/sealed_super_enum_mapper_example.dart
+      - name: sealed_super_enum_mapper_example init
+        working-directory: ./sealed_super_enum_mapper_example
+        run: dart pub get
+      - name: sealed_super_enum_mapper_example build
+        working-directory: ./sealed_super_enum_mapper_example
+        run: dart run build_runner build --delete-conflicting-outputs
+      - name: sealed_super_enum_mapper_example format
+        working-directory: ./sealed_super_enum_mapper_example
+        run: dart format --output=none --set-exit-if-changed ./bin/sealed_super_enum_mapper_example.dart ./test
+      - name: sealed_super_enum_mapper_example analyze
+        working-directory: ./sealed_super_enum_mapper_example
+        run: dart analyze
+      - name: sealed_super_enum_mapper_example test
+        working-directory: ./sealed_super_enum_mapper_example
+        run: dart test --coverage ./dart_coverage
+      - name: sealed_super_enum_mapper_example run
+        working-directory: ./sealed_super_enum_mapper_example
+        run: dart run
