added coverage format to workflow

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
+      - name: init coverage
+        working-directory: .
+        run: dart pub global activate coverage
       - name: sealed_annotations init
         working-directory: ./sealed_annotations
         run: dart pub get
@@ -27,6 +30,9 @@ jobs:
       - name: sealed_annotations test
         working-directory: ./sealed_annotations
         run: dart test --coverage ./dart_coverage
+      - name: sealed_annotations coverage
+        working-directory: ./sealed_annotations
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
       - name: sealed_annotations run example
         working-directory: ./sealed_annotations
         run: dart run ./example/sealed_annotations_example.dart
@@ -42,6 +48,9 @@ jobs:
       - name: sealed_generators test
         working-directory: ./sealed_generators
         run: dart test --coverage ./dart_coverage
+      - name: sealed_generators coverage
+        working-directory: ./sealed_generators
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
       - name: sealed_generators run example
         working-directory: ./sealed_generators
         run: dart run ./example/sealed_generators_example.dart
@@ -60,6 +69,9 @@ jobs:
       - name: example test
         working-directory: ./example
         run: dart test --coverage ./dart_coverage
+      - name: example coverage
+        working-directory: ./example
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
       - name: example run
         working-directory: ./example
         run: dart run
@@ -75,6 +87,9 @@ jobs:
       - name: sealed_super_enum_mapper test
         working-directory: ./sealed_super_enum_mapper
         run: dart test --coverage ./dart_coverage
+      - name: sealed_super_enum_mapper coverage
+        working-directory: ./sealed_super_enum_mapper
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
       - name: sealed_super_enum_mapper run example
         working-directory: ./sealed_super_enum_mapper
         run: dart run ./example/sealed_super_enum_mapper_example.dart
@@ -93,6 +108,9 @@ jobs:
       - name: sealed_super_enum_mapper_example test
         working-directory: ./sealed_super_enum_mapper_example
         run: dart test --coverage ./dart_coverage
+      - name: sealed_super_enum_mapper_example coverage
+        working-directory: ./sealed_super_enum_mapper_example
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
       - name: sealed_super_enum_mapper_example run
         working-directory: ./sealed_super_enum_mapper_example
         run: dart run
