--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -115,7 +115,7 @@ jobs:
         working-directory: ./sealed_super_enum_mapper_example
         run: dart run
       - name: Coveralls
-        uses: coverallsapp/github-action@1.1.2
+        uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.COVERALLS_TOKEN }}
           path-to-lcov: ./sealed_annotations/coverage/lcov.info
