--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -114,9 +114,8 @@ jobs:
       - name: sealed_super_enum_mapper_example run
         working-directory: ./sealed_super_enum_mapper_example
         run: dart run
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
+      - name: upload coverage to codecov
+        uses: codecov/codecov-action@v1
         with:
-          github-token: ${{ secrets.COVERALLS_TOKEN }}
-          path-to-lcov: ./sealed_annotations/coverage/lcov.info
-          base-path: ./sealed_annotations
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./sealed_generators/coverage/lcov.info
