fixed code coverage generation

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,7 +17,9 @@ jobs:
           sdk: stable
       - name: init coverage
         working-directory: .
-        run: dart pub global activate coverage
+        run: |
+          dart pub global activate coverage
+          sudo apt-get install lcov
       - name: sealed_annotations init
         working-directory: ./sealed_annotations
         run: dart pub get
@@ -32,7 +34,9 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_annotations coverage
         working-directory: ./sealed_annotations
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run: |
+          dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l --packages ./.packages --report-on ./lib
+          genhtml -o ./coverage/html ./coverage/lcov.info
       - name: sealed_annotations run example
         working-directory: ./sealed_annotations
         run: dart run ./example/sealed_annotations_example.dart
@@ -50,7 +54,9 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_generators coverage
         working-directory: ./sealed_generators
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run: |
+          dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l --packages ./.packages --report-on ./lib
+          genhtml -o ./coverage/html ./coverage/lcov.info
       - name: sealed_generators run example
         working-directory: ./sealed_generators
         run: dart run ./example/sealed_generators_example.dart
@@ -71,7 +77,9 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: example coverage
         working-directory: ./example
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run:
+          dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l  --packages ./.packages --report-on ./bin
+          genhtml -o ./coverage/html ./coverage/lcov.info
       - name: example run
         working-directory: ./example
         run: dart run
@@ -89,7 +97,9 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_super_enum_mapper coverage
         working-directory: ./sealed_super_enum_mapper
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run:
+          dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l  --packages ./.packages --report-on ./lib
+          genhtml -o ./coverage/html ./coverage/lcov.info
       - name: sealed_super_enum_mapper run example
         working-directory: ./sealed_super_enum_mapper
         run: dart run ./example/sealed_super_enum_mapper_example.dart
@@ -110,7 +120,9 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_super_enum_mapper_example coverage
         working-directory: ./sealed_super_enum_mapper_example
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run:
+          dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l  --packages ./.packages --report-on ./bin
+          genhtml -o ./coverage/html ./coverage/lcov.info
       - name: sealed_super_enum_mapper_example run
         working-directory: ./sealed_super_enum_mapper_example
         run: dart run
