--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -32,7 +32,7 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_annotations coverage
         working-directory: ./sealed_annotations
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l --packages ./.packages --report-on ./lib
       - name: sealed_annotations run example
         working-directory: ./sealed_annotations
         run: dart run ./example/sealed_annotations_example.dart
@@ -50,7 +50,7 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_generators coverage
         working-directory: ./sealed_generators
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l --packages ./.packages --report-on ./lib
       - name: sealed_generators run example
         working-directory: ./sealed_generators
         run: dart run ./example/sealed_generators_example.dart
@@ -71,7 +71,7 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: example coverage
         working-directory: ./example
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l --packages ./.packages --report-on ./bin
       - name: example run
         working-directory: ./example
         run: dart run
@@ -89,7 +89,7 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_super_enum_mapper coverage
         working-directory: ./sealed_super_enum_mapper
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l --packages ./.packages --report-on ./lib
       - name: sealed_super_enum_mapper run example
         working-directory: ./sealed_super_enum_mapper
         run: dart run ./example/sealed_super_enum_mapper_example.dart
@@ -110,7 +110,7 @@ jobs:
         run: dart test --coverage ./dart_coverage
       - name: sealed_super_enum_mapper_example coverage
         working-directory: ./sealed_super_enum_mapper_example
-        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l
+        run: dart pub global run coverage:format_coverage -i ./dart_coverage -o ./coverage/lcov.info -l --packages ./.packages --report-on ./bin
       - name: sealed_super_enum_mapper_example run
         working-directory: ./sealed_super_enum_mapper_example
         run: dart run
