--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -23,16 +23,13 @@ jobs:
         run: dart pub get
       - name: sealed_annotations format
         working-directory: sealed_annotations
-        run: dart format --output=none --set-exit-if-changed example lib test
+        run: dart format --output=none --set-exit-if-changed example lib test example/example.dart
       - name: sealed_annotations analyze
         working-directory: sealed_annotations
         run: dart analyze
       - name: sealed_annotations test
         working-directory: sealed_annotations
-        run: dart test --coverage dart_coverage
-      - name: sealed_annotations coverage
-        working-directory: sealed_annotations
-        run: dart pub global run coverage:format_coverage -i dart_coverage -o coverage/lcov.info -l --packages .packages --report-on lib
+        run: dart test
       - name: sealed_annotations run example
         working-directory: sealed_annotations
         run: dart run example/sealed_annotations_example.dart
@@ -41,16 +38,13 @@ jobs:
         run: dart pub get
       - name: sealed_generators format
         working-directory: sealed_generators
-        run: dart format --output=none --set-exit-if-changed example lib test
+        run: dart format --output=none --set-exit-if-changed example lib test example/example.dart
       - name: sealed_generators analyze
         working-directory: sealed_generators
         run: dart analyze
       - name: sealed_generators test
         working-directory: sealed_generators
-        run: dart test --coverage dart_coverage
-      - name: sealed_generators coverage
-        working-directory: sealed_generators
-        run: dart pub global run coverage:format_coverage -i dart_coverage -o coverage/lcov.info -l --packages .packages --report-on lib
+        run: dart test
       - name: sealed_generators run example
         working-directory: sealed_generators
         run: dart run example/sealed_generators_example.dart
@@ -68,10 +62,7 @@ jobs:
         run: dart analyze
       - name: example test
         working-directory: example
-        run: dart test --coverage dart_coverage
-      - name: example coverage
-        working-directory: example
-        run: dart pub global run coverage:format_coverage -i dart_coverage -o coverage/lcov.info -l --packages .packages --report-on bin
+        run: dart test
       - name: example run
         working-directory: example
         run: dart run
@@ -80,19 +71,16 @@ jobs:
         run: dart pub get
       - name: sealed_super_enum_mapper format
         working-directory: sealed_super_enum_mapper
-        run: dart format --output=none --set-exit-if-changed example lib test
+        run: dart format --output=none --set-exit-if-changed example lib test example/example.dart
       - name: sealed_super_enum_mapper analyze
         working-directory: sealed_super_enum_mapper
         run: dart analyze
       - name: sealed_super_enum_mapper test
         working-directory: sealed_super_enum_mapper
-        run: dart test --coverage dart_coverage
-      - name: sealed_super_enum_mapper coverage
-        working-directory: sealed_super_enum_mapper
-        run: dart pub global run coverage:format_coverage -i dart_coverage -o coverage/lcov.info -l --packages .packages --report-on lib
+        run: dart --no-sound-null-safety run test/all_tests.dart
       - name: sealed_super_enum_mapper run example
         working-directory: sealed_super_enum_mapper
-        run: dart run example/sealed_super_enum_mapper_example.dart
+        run: dart --no-sound-null-safety run example/sealed_super_enum_mapper_example.dart
       - name: sealed_super_enum_mapper_example init
         working-directory: sealed_super_enum_mapper_example
         run: dart pub get
@@ -107,10 +95,7 @@ jobs:
         run: dart analyze
       - name: sealed_super_enum_mapper_example test
         working-directory: sealed_super_enum_mapper_example
-        run: dart test --coverage dart_coverage
-      - name: sealed_super_enum_mapper_example coverage
-        working-directory: sealed_super_enum_mapper_example
-        run: dart pub global run coverage:format_coverage -i dart_coverage -o coverage/lcov.info -l --packages .packages --report-on bin
+        run: dart --no-sound-null-safety run test/test_all.dart
       - name: sealed_super_enum_mapper_example run
         working-directory: sealed_super_enum_mapper_example
-        run: dart run
+        run: dart --no-sound-null-safety run
