--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -29,7 +29,7 @@ jobs:
         run: dart analyze
       - name: sealed_annotations test
         working-directory: sealed_annotations
-        run: dart test
+        run: dart test test/all_test.dart
       - name: sealed_annotations run example
         working-directory: sealed_annotations
         run: dart run example/example.dart
@@ -44,7 +44,7 @@ jobs:
         run: dart analyze
       - name: sealed_generators test
         working-directory: sealed_generators
-        run: dart test
+        run: dart test test/all_test.dart
       - name: sealed_generators run example
         working-directory: sealed_generators
         run: dart run example/example.dart
@@ -62,7 +62,7 @@ jobs:
         run: dart analyze
       - name: example test
         working-directory: example
-        run: dart test
+        run: dart --no-sound-null-safety run test/all_test.dart
       - name: example run
         working-directory: example
         run: dart run
@@ -77,7 +77,7 @@ jobs:
         run: dart analyze
       - name: sealed_super_enum_mapper test
         working-directory: sealed_super_enum_mapper
-        run: dart --no-sound-null-safety run test/all_tests.dart
+        run: dart --no-sound-null-safety run test/all_test.dart
       - name: sealed_super_enum_mapper run example
         working-directory: sealed_super_enum_mapper
         run: dart --no-sound-null-safety run example/example.dart
