--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -108,4 +108,4 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./sealed_generators/coverage/lcov.info
+          files: sealed_generators/coverage/lcov.info
