--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -2,7 +2,7 @@ name: Dart
 
 on:
   push:
-    branches: [ master publish ]
+    branches: [ master, publish ]
   pull_request:
     branches: [ master ]
 
@@ -111,7 +111,7 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [ test ]
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
