--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -47,6 +47,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: [ analyze ]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
@@ -64,6 +65,7 @@ jobs:
 
   build_test:
     runs-on: ubuntu-latest
+    needs: [ analyze, test ]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
@@ -88,6 +90,7 @@ jobs:
 
   run_example:
     runs-on: ubuntu-latest
+    needs: [ analyze, test, build_test ]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
@@ -111,7 +114,7 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
-    needs: [ test ]
+    needs: [ analyze, test, build_test, run_example ]
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
