--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -71,6 +71,24 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
+      - name: init
+        working-directory: .
+        run: |
+          cd sealed_annotations
+          dart pub get
+          cd ..
+          cd sealed_generators
+          dart pub get
+          cd ..
+          cd example
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper_example
+          dart pub get
+          cd ..
       - name: sealed_annotations test
         working-directory: sealed_annotations
         run: dart test test/all_test.dart
@@ -89,6 +107,24 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
+      - name: init
+        working-directory: .
+        run: |
+          cd sealed_annotations
+          dart pub get
+          cd ..
+          cd sealed_generators
+          dart pub get
+          cd ..
+          cd example
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper_example
+          dart pub get
+          cd ..
       - name: example build
         working-directory: example
         run: dart run build_runner build --delete-conflicting-outputs
@@ -114,6 +150,24 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
+      - name: init
+        working-directory: .
+        run: |
+          cd sealed_annotations
+          dart pub get
+          cd ..
+          cd sealed_generators
+          dart pub get
+          cd ..
+          cd example
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper_example
+          dart pub get
+          cd ..
       - name: sealed_annotations run example
         working-directory: sealed_annotations
         run: dart run example/example.dart
@@ -139,6 +193,24 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
+      - name: init
+        working-directory: .
+        run: |
+          cd sealed_annotations
+          dart pub get
+          cd ..
+          cd sealed_generators
+          dart pub get
+          cd ..
+          cd example
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper
+          dart pub get
+          cd ..
+          cd sealed_super_enum_mapper_example
+          dart pub get
+          cd ..
       - name: install coverage package
         working-directory: .
         run: dart pub global activate coverage
